# asteroids

./: .gitignore  CHANGELOG  Cargo.toml  README.md  asteroids.gdextension  bullet.tscn  export_presets.cfg  meteor.tscn  parallax.gd  project.godot  stage.tscn  start_menu.tscn
assets/: compass.png.import  cursor.png.import  dart.png.import  engine.wav.import  explosion.wav.import  game-over.ttf.import  icon.png.import  loop.mp3.import  main.ttf.import  meteor1.png.import  meteor2.png.import  meteor3.png.import  meteor4.png.import  player-exploding.wav.import  shot.wav.import
game/: Cargo.toml
game/src/: bullet.rs  compass.rs  globals.rs  lib.rs  macros.rs  meteor.rs  sice_string.rs  since_string.rs  stage.rs  stars.rs  start_menu.rs
