[package]
name = "game"
version = "1.0.0"
edition = "2021"

[dependencies]
serde_json = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.godot]
version = "0.1.3"
features = ["api-4-2"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[lib]
crate-type = ["cdylib", "staticlib"]
